# bisHash

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configs.h  main.cpp  params.cpp  params.h  smith.cpp  smith.h
bio_utils/: bio_reader.cpp  bio_reader.h  sam_writer.cpp  sam_writer.h  sequence.cpp  sequence.h  sequence_reader.cpp  sequence_reader.h
hashing/: family_min_hash.cpp  family_min_hash.h  hash_utils.cpp  hash_utils.h
indexing/: object_writer.cpp  object_writer.h
simulation/: runAlgos.sh  run_sam_read_compare.sh  sam_read_compare.py
utils/: logger.cpp  logger.h  multiproc.cpp  multiproc.h  time_profile.cpp  time_profile.h
